src/core/manager.c
@@ -70,6 +70,7 @@
 #include "cgroup-util.h"
 #include "path-util.h"
 #include "audit-fd.h"
+#include "efivars.h"
 #include "env-util.h"
 
 /* As soon as 16 units are in our GC queue, make sure to run a gc sweep */
@@ -438,6 +439,11 @@ int manager_new(SystemdRunningAs running_as, Manager **_m) {
         m = new0(Manager, 1);
         if (!m)
                 return -ENOMEM;
+
+#ifdef ENABLE_EFI
+        if (detect_container(NULL) <= 0)
+                efi_get_boot_timestamps(&m->userspace_timestamp, &m->firmware_timestamp, &m->loader_timestamp);
+#endif
 
         m->running_as = running_as;
         m->name_data_slot = m->conn_data_slot = m->subscribed_data_slot = -1;
